# spindle

./: .coverage  .env.example  .gitignore  CLAUDE.md  MANIFEST.in  MIGRATION_PLAN.md  README.md  REFACTORING_VERIFICATION.md  debug.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  spindle.py
.claude/: settings.local.json
.cursor/rules/: conda.mdc  uv.mdc
.github/workflows/: tests.yml.example
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: spindle.baml
demos/: example.py  example_analytics_dashboard.py  example_api_usage.py  example_auto_ontology.py  example_entity_resolution.py  example_graph_store.py  example_ontology_extension.py  example_ontology_recommender.py  example_scope_comparison.py  ingestion_benchmark.py  test_ontology_recommender.py
docs/: CONDA_TO_UV_MIGRATION.md  CONFIGURATION.md  ENTITY_RESOLUTION.md  ENV_SETUP.md  GRAPH_STORE.md  INGESTION_ANALYTICS.md  INGESTION_TEMPLATES.md  OBSERVABILITY.md  ONTOLOGY_RECOMMENDER.md  PACKAGE_STRUCTURE.md  QUICKSTART.md  TESTING.md  TESTING_QUICK_REF.md  TESTING_SUMMARY.md  UV_SETUP.md  VERTEX AI SETUP.md  fast_online_extraction.md  new_PRD.md  redesign_critique.md  roadmap.md  user_stories_future.md  vocab.md
docs/Spindle/: CONFIGURATION.md  ENTITY_RESOLUTION.md  ENV_SETUP.md  GRAPH_STORE.md  OBSERVABILITY.md  PACKAGE_STRUCTURE.md  QUICKSTART.md  README.md  TESTING.md  config.md  glossary.md  kos_data_model.md  pipeline_steps.md  provenance_model.md  user_stories_supported.md
docs/context/: process_knowledge_management.md
docs/dev_updates/: AUTO_ONTOLOGY_UPDATE.md  CHANGES.md  CHANGES_ONTOLOGY_RECOMMENDER.md  GRAPHSTORE_PATH_UPDATE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PACKAGE_REFACTOR_FIX.md  PANDAS_DEPENDENCY_FIX.md  SCOPE_BASED_ONTOLOGY_DESIGN.md  SCOPE_IMPLEMENTATION_SUMMARY.md  UPDATE_SUMMARY.md  UV_MIGRATION_SUMMARY.md  overview.md
docs/planning/: Saga_PRD_Extraction.md  Saga_comparison.md
docs/v1/: ENV_SETUP.md  GRAPH_STORE.md  INGESTION_TEMPLATES.md  OBSERVABILITY.md  ONTOLOGY_RECOMMENDER.md  PACKAGE_STRUCTURE.md  QUICKSTART.md  SPINDLE_REDESIGN.md  TESTING_QUICK_REF.md  notes.md
docs/v2/: SpindleWorkflow.md  coref_res.md  glossary.md  kg_maintenance_updating.md  notes.md  pipeline_steps.md  spindle-developer-guide.md
docs/v2/context/: v1_user_stories_supported.md
docs/v2/design/: doc_service.md  kos_data_model.md  kos_extraction.md  plan-spindle-modifications.md  provenance_model.md  spindle_v2_implementation_plan.md
kos/: blacklist.txt  kos.ttls  ontology.owl  shapes.ttl
kos/config/: scheme.ttl
kos/staging/: taxonomy.ttls  thesaurus.ttls  vocabulary.ttls
notebooks/: e2e_walkthrough.ipynb  example_auth.ipynb
spindle/: __init__.py  configuration.py  entity_resolution.py  eval_bridge.py  extractor.py  graph_embeddings.py  graph_store.py  hydra_plugin.py  llm_config.py  llm_pricing.py  tracking.py  vector_store.py
spindle/analytics/: __init__.py  recorder.py  schema.py  store.py  views.py
spindle/api/: API_IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  dependencies.py  kos_router.py  main.py  models.py  session.py  utils.py
spindle/api/routers/: __init__.py  corpus.py  extraction.py  ingestion.py  ontology.py  pipeline.py  process.py  resolution.py
spindle/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
spindle/baml_client/baml_client/: parser.py  type_builder.py  type_map.py  types.py
spindle/baml_src/: clients.baml  entity_resolution.baml  generators.baml  pipeline.baml  process.baml  spindle.baml
spindle/conf/generation/: default.yaml
spindle/dashboard/: __init__.py  app.py
spindle/entity_resolution/: __init__.py  blocking.py  config.py  matching.py  merging.py  models.py  resolver.py  utils.py
spindle/extraction/: __init__.py  extractor.py  helpers.py  process.py  recommender.py  utils.py
spindle/graph_store/: __init__.py  base.py  edges.py  embeddings.py  nodes.py  resolution.py  store.py  triples.py  utils.py
spindle/ingestion/: __init__.py  cli.py  errors.py  service.py  types.py  utils.py
spindle/kos/: __init__.py  blacklist.py  extraction.py  extraction_llm.py  indices.py  models.py  ner.py  serializer.py  service.py  staging.py  synthesis.py  validation.py
spindle/notebooks/: debug.ipynb  example_analytics_queries.ipynb  example_doc_ingestion.ipynb  example_e2e.ipynb  example_embeddings.ipynb  example_entity_resolution.ipynb  example_graph_store.ipynb  example_node_embeddings.ipynb  example_ontology_recommender.ipynb  example_process_extraction.ipynb  ontology_pipeline_quickstart.ipynb  resolution_results.json
spindle/observability/: __init__.py  events.py  storage.py
spindle/pipeline/: __init__.py  base.py  cli.py  knowledge_graph.py  metadata.py  ontology_stage.py  orchestrator.py  strategies.py  taxonomy.py  thesaurus.py  types.py  vocabulary.py
spindle/preprocessing/: __init__.py  chunking.py  coref.py  ingestion.py  models.py  offsets.py  preprocessor.py
spindle/provenance/: __init__.py  conversion.py  keys.py  migration.py  models.py  store.py
spindle/stages/: __init__.py  entity_resolution.py  generation.py  kos_extraction.py  ontology_synthesis.py  preprocessing.py  retrieval.py
spindle/vector_store/: __init__.py  base.py  chroma.py  embeddings.py  graph_embeddings.py
tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_configuration.py  test_embeddings.py  test_entity_resolution.py  test_eval_bridge.py  test_extractor.py  test_graph_store.py  test_helpers.py  test_ingestion_pipeline.py  test_ingestion_templates.py  test_integration.py  test_kos_api.py  test_kos_extraction.py  test_kos_service.py  test_observability_events.py  test_preprocessing.py  test_process_extraction.py  test_provenance_keys.py  test_provenance_store.py  test_recommender.py  test_serialization.py  test_stages.py  test_tracking.py
tests/fixtures/: __init__.py  ingestion.py  sample_ontologies.py  sample_texts.py
(+31 files in other folders)
