[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spindle-kg"
version = "0.1.0"
description = "A tool for real-time extraction of knowledge graphs from multimodal data using BAML and LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Spindle Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "baml-py==0.211.2",
    "python-dotenv==1.0.0",
    "kuzu>=0.7.0",
    "pandas>=2.0.0",
    "chromadb>=0.4.0",
    "numpy",
    "ipywidgets>=8.0.0",
    "node2vec>=0.4.5",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.4.0",
    "hypothesis>=6.98.0",
    "ipykernel>=6.0.0",
]
graph = [
    "kuzu>=0.7.0",
    "node2vec>=0.4.5",
    "networkx>=3.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
embeddings-api = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "huggingface_hub",
    "google-generativeai",
]

[project.urls]
Homepage = "https://github.com/danielkentwood/spindle"
Repository = "https://github.com/danielkentwood/spindle"

[tool.setuptools]
packages = ["spindle", "spindle.baml_client"]

[tool.setuptools.package-data]
spindle = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=spindle",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["spindle"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
