[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spindle-kg"
version = "0.1.0"
description = "A tool for iterative, ontology-aware extraction of knowledge graphs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Spindle Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "baml-py==0.213.0",
    "python-dotenv==1.0.0",
    "kuzu>=0.7.0",
    "pandas>=2.0.0",
    "chromadb>=0.4.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "numpy",
    "ipywidgets>=8.0.0",
    "node2vec>=0.4.5",
    "networkx>=3.0",
    "anthropic[vertex]>=0.68.0",
    "google-auth>=2.0.0",
    "google-cloud-aiplatform>=1.40.0",
    "streamlit>=1.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.4.0",
    "hypothesis>=6.98.0",
    "ipykernel>=6.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
embeddings-api = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "huggingface_hub",
    "google-generativeai",
]

[project.urls]
Homepage = "https://github.com/danielkentwood/spindle"
Repository = "https://github.com/danielkentwood/spindle"

[project.scripts]
spindle-ingest = "spindle.ingestion.cli:main"
spindle-dashboard = "spindle.dashboard.app:main"

[tool.setuptools]
packages = [
    "spindle",
    "spindle.baml_client",
    "spindle.ingestion",
    "spindle.ingestion.pipeline",
    "spindle.ingestion.loaders",
    "spindle.ingestion.splitters",
    "spindle.ingestion.templates",
    "spindle.ingestion.observers",
    "spindle.ingestion.storage",
    "spindle.ingestion.graph",
]

[tool.setuptools.package-data]
spindle = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=spindle",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["spindle"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
