[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spindle-kg"
version = "0.1.0"
description = "A tool for iterative, ontology-aware extraction of knowledge graphs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Spindle Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "baml-py==0.214.0",
    "python-dotenv==1.0.0",
    "kuzu>=0.7.0",
    "pandas>=2.0.0",
    "chromadb>=0.4.0",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "numpy",
    "networkx>=3.0",
    "anthropic[vertex]>=0.68.0",
    "google-auth>=2.0.0",
    "google-cloud-aiplatform>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pyoxigraph>=0.3.0",
    "pyahocorasick>=2.0.0",
    "hnswlib>=0.8.0",
    "pyshacl>=0.25.0",
    "docling>=2.0.0",
    "chonkie>=0.3.0",
    "deepdiff>=6.0.0",
    "fastcoref>=2.1.0",
    "gliner>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.4.0",
    "hypothesis>=6.98.0",
    "ipykernel>=6.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
embeddings-api = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "huggingface_hub",
    "google-generativeai",
]
eval = [
    "spindle-eval>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/danielkentwood/spindle"
Repository = "https://github.com/danielkentwood/spindle"

[project.scripts]
spindle-api = "spindle.api.main:main"

[project.entry-points."hydra.conf_store"]
spindle = "spindle.hydra_plugin:_register_plugin"

[tool.setuptools]
packages = [
    "spindle",
    "spindle.baml_client",
    "spindle.baml_src",
    "spindle.api",
    "spindle.api.routers",
    "spindle.extraction",
    "spindle.entity_resolution",
    "spindle.graph_store",
    "spindle.vector_store",
    "spindle.observability",
    "spindle.provenance",
    "spindle.preprocessing",
    "spindle.kos",
    "spindle.stages",
    "spindle.conf",
    "spindle.conf.preprocessing",
    "spindle.conf.kos_extraction",
    "spindle.conf.ontology_synthesis",
    "spindle.conf.retrieval",
    "spindle.conf.generation",
]

[tool.setuptools.package-data]
spindle = ["py.typed"]
"spindle.conf" = ["**/*.yaml"]
"spindle.conf.preprocessing" = ["*.yaml"]
"spindle.conf.kos_extraction" = ["*.yaml"]
"spindle.conf.ontology_synthesis" = ["*.yaml"]
"spindle.conf.retrieval" = ["*.yaml"]
"spindle.conf.generation" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=spindle",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["spindle"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
